--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.1.3",
     "ngx-toastr": "^14.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
