--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/compiler": "~12.1.0",
     "@angular/core": "~12.1.0",
     "@angular/forms": "~12.1.0",
+    "@angular/localize": "^13.0.2",
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
@@ -22,6 +23,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "ngx-toastr": "^14.2.0",
+    "polyfills": "^2.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
